CSS styling and JavaScript start

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </a>
          </li>
          <li>
-          <a href="https://facebook.com/Denilson Bernardo">
+          <a href="https://facebook.com/DenilsonBernardo(denilson)">
             <img src="images/facebook.svg" alt="ícone facebook" target="_blank" />
           </a>
         </li>
